# toxbase

./: .gitignore  Dockerfile  Untitled.ipynb  app.py  conf.sh  docker-compose.ylm  docker-compose.yml  extractor.py  extractor_page.py  main.py  makefile  pyproject.toml  requirements.txt  run_webserver.sh  setup.sh  st_main.py
.ipynb_checkpoints/: main-checkpoint.py
data/: toxins_id.csv
db/: toxbase.db
extractors/: extractor.py
notebook/: Untitled.ipynb
notebook/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
selenoid/config/: browsers.json
src/: __init__.py  database.py  decorators.py  forms.py  model.py  models.py  routes.py  run.py
src/extractors/: extractor.py
src/notebook/: Untitled.ipynb
src/notebook/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/notebooks/: Untitled.ipynb
src/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/templates/: admin_area.html  base.html  home.html  login.html  toxins_finder.html  user_area.html
streamlit/: requirements.txt
templates/: home.html  index.html  toxins_finder.html
